[gd_scene load_steps=5 format=3 uid="uid://1ew7165qd2hc"]

[ext_resource type="Script" path="res://Scenes/websocket/Server.gd" id="1_lop6l"]
[ext_resource type="Script" path="res://addons/nodewebsockets/websocket_server.gd" id="2_o1c87"]
[ext_resource type="Theme" uid="uid://u1r3qsyvbvcj" path="res://new_theme.tres" id="3_tn0wq"]
[ext_resource type="PackedScene" uid="uid://c3xl2f0km2lwt" path="res://Scenes/screen_jugador.tscn" id="4_em7vb"]

[node name="Server" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lop6l")

[node name="WebSocketServer" type="Node" parent="."]
script = ExtResource("2_o1c87")

[node name="esperando" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.5
offset_top = -12.0
offset_right = 125.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_tn0wq")
theme_override_font_sizes/font_size = 60
text = "Esperando contrincante"
horizontal_alignment = 1

[node name="ScreenJugador" parent="." instance=ExtResource("4_em7vb")]
visible = false

[connection signal="client_connected" from="WebSocketServer" to="." method="_on_web_socket_server_client_connected"]
[connection signal="text_received" from="WebSocketServer" to="." method="_on_web_socket_server_text_received"]
[connection signal="fin_turno" from="ScreenJugador" to="." method="_on_screen_jugador_fin_turno"]
